--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-github-calendar": "^4.3.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-resizable": "^3.0.5",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
