--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-resizable": "^3.0.5",
+    "react-spring": "^9.7.4",
     "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
